--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.11.4",
     "@pinia/nuxt": "0.11.2",
     "nuxt": "^3.18.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "sass": "^1.90.0"
   }
 }
